added button colours to etch a sketch board

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
             <p>Select the size</p>
             <button id="select">Select</button>
         </div>
+        <p id = "message"></p>
         <div class="board"></div>
         <div class="footer">
-            <button id="black">Black</button>
-            <button id="random">Random</button>
-            <button id="reset">Reset</button>
+            <button id="black" onclick="setColor('black')">Black</button>
+            <button id="random" onclick="setColor('random')">Random</button>
+            <button id="reset" onclick="setColor('reset')">Reset</button>
         </div>
+       
 
 
 
