--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <button id="black" onclick="setColor('black')">Black</button>
             <button id="random" onclick="setColor('random')">Random</button>
-            <button id="reset" onclick="setColor('reset')">Reset</button>
+            <button id="reset" onclick="resetBoard()">Reset</button>
         </div>
        
 
