added draw message upon click

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <button id="select">Select</button>
         </div>
         <p id = "message"></p>
+        <p id="draw"></p>
         <div class="board"></div>
         <div class="footer">
             <button id="black" onclick="setColor('black')">Black</button>
